@@ -2,6 +2,7 @@
 This project contains the content model and webscripts for accessing and modifying the alfresco repository. 
 
 Location of content model: src/main/amp/config/alfresco/module/view-repo/viewModel.xml
+
 This is registered by spring config in module-context.xml (which imports another spring config xml)
 
 Location of webscripts: src/main/amp/config/alfresco/extension/templates/webscripts
@@ -10,8 +11,10 @@ To build the amp file, do
 
     mvn package
     
-To run in embedded jetty container and H2 db,
+To run in embedded jetty container and H2 db, 
 
+	export MAVEN_OPTS='-Xms256m -Xmx1G -XX:PermSize=300m'
+	
     mvn integration-test -Pamp-to-war
     
 To clean all data and artifacts
@@ -19,6 +22,44 @@ To clean all data and artifacts
     mvn clean -Ppurge
 
 Go to [http://localhost:8080/view-repo/](http://localhost:8080/view-repo/) for the alfresco explorer interface (it'll take a while to startup)
+
+In the repository, create a "/ViewEditor/model" folder and "/ViewEditor/snapshots" folder, the view information will be created in these spaces.
+
+Post test view:
+
+    curl -H "Content-Type: application/json" --data @test-data/postview.json -X POST -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_1_2_407019f_1340300322136_11866_17343?force=true&recurse=true&doc=true&user=dlam"
+
+Post view hierarchy:
+
+    curl -H "Content-Type: application/json" --data @test-data/postviewhierarchy.json -X POST -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_1_2_407019f_1340300322136_11866_17343/hierarchy"
+
+Post DocGen Manual
+
+    curl -H "Content-Type: application/json" --data @test-data/docgenManual.json -X POST -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_3_244e03eb_1333856871739_813876_16836?force=true&recurse=true&doc=true&user=dlam"
+
+Post comments
+
+	curl -H "Content-Type: application/json" --data @test-data/postcomment.json -X POST -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_1_2_407019f_1340300322136_11866_17343/comments?recurse=true"
+
+Post Project organization
+
+	curl -H "Content-Type: application/json" --data @test-data/postproject.json -X POST -u admin:admin "http://localhost:8080/view-repo/service/rest/projects/europa"
+	
+Get test view
+
+	curl -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_1_2_407019f_1340300322136_11866_17343?recurse=true"
+
+Get DocGen Manual
+
+	curl -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_3_244e03eb_1333856871739_813876_16836?recurse=true"
+
+Get comments
+
+	curl -u admin:admin "http://localhost:8080/view-repo/service/rest/views/_17_0_1_2_407019f_1340300322136_11866_17343/comments?recurse=true"
+	
+To open the javascript debugger: [http://localhost:8080/view-repo/service/api/javascript/debugger](http://localhost:8080/view-repo/service/api/javascript/debugger) (you may have to close and reopen to get it to step through on consecutive script calls)
+
+To refresh changes to scripts (they have to be updated in the "target/view-repo-war/WEB-INF/classes/alfresco/extension/..."): [http://localhost:8080/view-repo/service/index](http://localhost:8080/view-repo/service/index) hit refresh at the botton
 
 Maven archetype from [Alfresco Maven SDK](https://artifacts.alfresco.com/nexus/content/repositories/alfresco-docs/alfresco-lifecycle-aggregator/latest/index.html)
 
